--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,15 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<hamcrest.version>1.3</hamcrest.version>
+
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -72,5 +78,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 
 </project>
